--- a/app/src/main/res/layout/activity_sensor_fingerprint.xml
+++ b/app/src/main/res/layout/activity_sensor_fingerprint.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -29,6 +28,27 @@
             android:layout_marginTop="100dip"
             android:layout_marginBottom="100dip"
             android:stretchColumns="*">
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/sensorfingerprint_activity_tv_UUIDTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/roboto"
+                    android:text="@string/uuid"
+                    android:textColor="@color/black" />
+
+                <TextView
+                    android:id="@+id/sensorfingerprint_activity_tv_UUIDValue"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:fontFamily="@font/roboto"
+                    android:textColor="@color/black" />
+            </TableRow>
 
             <TableRow
                 android:layout_width="match_parent"
