--- a/app/src/main/res/layout/activity_feature.xml
+++ b/app/src/main/res/layout/activity_feature.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -21,11 +20,27 @@
             android:textStyle="bold" />
 
         <Button
-            android:id="@+id/feature_activity_btn_sensorfingerprint"
+            android:id="@+id/feature_activity_btn_sensorfingerprint_3trace"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/roboto"
-            android:text="@string/features_sensorfingerprint"
+            android:text="@string/features_sensorfingerprint_3trace"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/feature_activity_btn_sensorfingerprint_2trace"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/roboto"
+            android:text="@string/features_sensorfingerprint_2trace"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/feature_activity_btn_sensorfingerprint_1trace"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/roboto"
+            android:text="@string/features_sensorfingerprint_1trace"
             android:textStyle="bold" />
 
     </LinearLayout>
