--- a/app/src/main/res/layout/activity_sensor_fingerprint.xml
+++ b/app/src/main/res/layout/activity_sensor_fingerprint.xml
@@ -28,6 +28,15 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/sensorfingerprint_activity_tv_matchScore"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/roboto"
+                android:gravity="center"
+                android:textColor="#000000"
+                android:textSize="14sp"/>
+
+            <TextView
                 android:id="@+id/sensorfingerprint_activity_tv_fingerprintResult"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
