--- a/app/src/main/res/layout/activity_sensor_fingerprint.xml
+++ b/app/src/main/res/layout/activity_sensor_fingerprint.xml
@@ -55,6 +55,12 @@
                 android:text="@string/sensorfingerprint_startOver" />
 
             <Button
+                android:id="@+id/sensorfingerprint_activity_btn_exportFingerprints"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/export_fingerprint" />
+
+            <Button
                 android:id="@+id/sensorfingerprint_activity_btn_correctIdentification"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
